[gd_scene load_steps=4 format=3 uid="uid://byj2lelvd70pf"]

[ext_resource type="Script" uid="uid://b1uvv172wojis" path="res://enemy/enemy.gd" id="1_7k104"]
[ext_resource type="PackedScene" uid="uid://cktwlo61cinst" path="res://ui/enemy_heath_bar.tscn" id="2_ofsxj"]
[ext_resource type="PackedScene" uid="uid://bh70vq2vgjndv" path="res://BOXES/hit_box.tscn" id="3_ppra6"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_7k104")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="attackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Enemy_health_bar" parent="." instance=ExtResource("2_ofsxj")]

[node name="Damage_Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="HitBox" parent="." instance=ExtResource("3_ppra6")]

[node name="RayCast2D" parent="HitBox" index="0"]
target_position = Vector2(-35, -1)

[editable path="Enemy_health_bar"]
[editable path="HitBox"]
